forgot password functionality, some cleanup, some refactoring
