# resources/views/email/reset_password.blade.php
@@ -1,0 +1,10 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Reset Password</title>
+</head>
+<body>
+    <h1>Reset Your Password</h1>
+    <p>here is you reset token: {{ $token }}</p>
+</body>
+</html>
